// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElementTree renders correctly 1`] = `
<div>
  <div
    class=" elements"
  >
    <h2
      class="title"
    >
      Elements
    </h2>
    <div
      class="treeNode"
    >
      <div
        class="title  "
        tabindex="0"
      >
        <div
          class="titleIn level0"
        >
          <button
            aria-label="Collapse"
            class="collapseButton"
          >
            <i
              class="iconoir-nav-arrow-down "
            />
          </button>
          <i
            class="iconoir-square shapeIcon"
          />
          <div
            class="titleText"
          >
            <span
              class="text"
              tabindex="0"
            >
              Element 1
            </span>
          </div>
          <button
            class="iconButton  small"
          >
            <i
              class="iconoir-more-vert "
            />
          </button>
        </div>
      </div>
      <div
        class="treeNode"
      >
        <div
          class="title  "
          tabindex="0"
        >
          <div
            class="titleIn level1"
          >
            <i
              class="iconoir-3d-bridge shapeIcon"
            />
            <div
              class="titleText"
            >
              <span
                class="text"
                tabindex="0"
              >
                Element 2
              </span>
            </div>
            <button
              class="iconButton  small"
            >
              <i
                class="iconoir-more-vert "
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ElementTree renders correctly with collapsed elements 1`] = `
<div>
  <div
    class=" elements"
  >
    <h2
      class="title"
    >
      Elements
    </h2>
    <div
      class="treeNode"
    >
      <div
        class="title  "
        tabindex="0"
      >
        <div
          class="titleIn level0"
        >
          <button
            aria-label="Expand"
            class="collapseButton"
          >
            <i
              class="iconoir-nav-arrow-right "
            />
          </button>
          <i
            class="iconoir-square shapeIcon"
          />
          <div
            class="titleText"
          >
            <span
              class="text"
              tabindex="0"
            >
              Element 1
            </span>
          </div>
          <button
            class="iconButton  small"
          >
            <i
              class="iconoir-more-vert "
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
